--- a/dadi/index.html
+++ b/dadi/index.html
@@ -7,10 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <label for="number">Scegli un numero da 1 a 6</label>
-    <input type="number" id="number">
-    <button class="button">clicca</button>
-    <div class="result"></div>
+    <button id="button">Gioca</button>
+    <div>
+        Player: <span id="num-player"></span>
+        - Computer <span id="num-computer"></span> 
+    </div>
+    <div id="result"></div>
     <script src="script.js"></script>
 </body>
 </html>
